--- a/Mundial2010.css
+++ b/Mundial2010.css
@@ -70,6 +70,18 @@ header {
   color: #d4d4d4;
 }
 
+.hover-card { /* estil per a les cartes amb efecte hover */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+.hover-card:hover {
+    transform: scale(1.02); /* El zoom */
+    
+    /* Opcional: sombra mejorada */
+    box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.532) !important;
+}
+
 .navbar { /*ombra del navbar*/
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
 }
@@ -353,7 +365,7 @@ header {
 
   
   background-image: 
-    linear-gradient(180deg, rgba(2,18,44,0.95), rgba(2,18,44,0.95)),
+    linear-gradient(180deg, rgba(2, 18, 44, 0.949), rgba(2,18,44,0.95)),
     url('./imagenes/espiral-suave-curvas-luz-monocromaticas-ruido-fondo-abstracto-textura-granulada-gris-oscuro_976983-412.avif');
   
   background-size: cover;
@@ -370,4 +382,69 @@ header {
 #fifa .row img:hover { /* efecte hover de les imatges de FIFA+ */
   box-shadow: 0 8px 20px rgba(255, 255, 255, 0.25);
   transform: scale(1.03);
+}
+
+.mi-boton {
+  background-color: #03ff5e; /* Color de fondo del botón */
+  color: #02122c;              /* Color del texto */
+  border: none;              /* Quita el borde */
+  padding: 10px 20px;        /* Espaciado interno */
+  border-radius: 8px;        /* Bordes redondeados */
+  cursor: pointer;           /* Cursor tipo "mano" */
+}
+
+/* Efecto al pasar el mouse */
+.mi-boton:hover {
+  background-color: #008230; /* Color al pasar el ratón */
+  color: #02122c;               /* Color del texto al pasar el ratón */
+}
+
+.container-fluid.blue-gradient { /* Contenidor amb fons de gradient gris + imatge de fons */
+  position: relative;
+  overflow: hidden;
+  background: none; 
+}
+
+.container-fluid.blue-gradient::before { /* Capa de fons amb imatge i degradat gris */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-image: 
+    linear-gradient(180deg, rgba(44, 2, 2, 0.603), rgba(44, 2, 2, 0.603)),
+    url('./imagenes/iniesta.jpeg');
+  
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  z-index: -1; /* al fondo */
+}
+
+.container-fluid.black-gradient { /* Contenidor amb fons de gradient gris + imatge de fons */
+  position: relative;
+  overflow: hidden;
+  background: none; 
+}
+
+.container-fluid.black-gradient::before { /* Capa de fons amb imatge i degradat gris */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-image: 
+    linear-gradient(180deg, rgba(0, 0, 0, 0.958), rgba(0, 0, 0, 0.766)),
+    url('./imagenes/fondo-de-gradiente-abstracto-con-un-efecto-granulado.jpg');
+  
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  z-index: -1; /* al fondo */
 }
